# esp-idf-arduino-bluepad32-template

./: .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  K10_MIGRATION.md  platformio.ini  sdkconfig.defaults  sdkconfig.unihiker_k10_arcade  sdkconfig.unihiker_k10_bp32
.claude/: settings.local.json
.github/workflows/: esp-idf-latest.yaml
boards/: unihiker_k10_arcade.json
components/bluepad32/: CMakeLists.txt  uni_hid_device.c
components/bluepad32/bt/: uni_bt.c
components/bluepad32/include/: uni_config.h  uni_hid_device.h
components/bluepad32/platform/: uni_platform_unijoysticle.c
components/cmd_system/: cmd_system.c  cmd_system.h  cmd_system_common.c  cmd_system_sleep.c
k10_factory_program/: DFR0992_EN_FW_20250422.c
main/: CMakeLists.txt  k10_app.cpp  k10_app.h  k10_bt_gamepad.cpp  k10_bt_gamepad.h  k10_config.h  k10_emulator.cpp  k10_emulator.h  k10_emulator_core.c  k10_hardware.cpp  k10_hardware.h  k10_idf.h  k10_input.h  k10_video.cpp  k10_video.h  main.c  sketch.cpp
main/arcade_core/: Z80.c  Z80.h  config.h  dip_switches.h  emulation.c  galaga.h  galaga_cmap_sprites.h  galaga_cmap_tiles.h  galaga_rom1.h  galaga_rom2.h  galaga_rom3.h  galaga_spritemap.h  galaga_tilemap.h  galaga_wavetable.h
